--- a/Comp229-TeamAssign/Content/Site.css
+++ b/Comp229-TeamAssign/Content/Site.css
@@ -2,6 +2,18 @@
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family: Calibri;
+    font-size: 20px;
+}
+
+footer {
+    background-color: #84563f;
+    color: white;
+    padding-top: 10px;
+    font-size: 18px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 /* Wrapping element */
@@ -18,7 +30,6 @@ textarea {
     max-width: 280px;
 }
 
-
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .jumbotron {
@@ -28,4 +39,41 @@ textarea {
     .body-content {
         padding: 0;
     }
+}
+
+.navbar-inverse {
+    background-color: #9f887d;
+    border-color: #9f887d;
+}
+
+.navbar-inverse .navbar-brand {
+    padding: 5px 15px;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #000000;
+    font-weight: bolder;
+}
+
+.navbar-inverse .navbar-toggle {
+    border-color: #84563f;
+}
+
+.navbar-inverse .navbar-toggle:hover {
+    background-color: #84563f;
+}
+
+.navbar-inverse .navbar-toggle:focus {
+    background-color: #84563f;
+}
+
+.navbar-inverse .navbar-collapse,
+.navbar-inverse .navbar-form {
+    border-color: #84563f;
+}
+
+.ub-nav-bar-logo {
+    width: 53px;
+    height: 40px;
+    border-radius: 5px;
 }
