--- a/Comp229-TeamAssign/Site.Master
+++ b/Comp229-TeamAssign/Site.Master
@@ -47,7 +47,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">
+                        <img src="Images/logo.png" class="ub-nav-bar-logo"/>
+                    </a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -59,11 +61,13 @@
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
-            <hr />
-            <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
-            </footer>
         </div>
+
+        <footer>
+            <div class="container body-content">
+                <p>&copy; <%: DateTime.Now.Year %> - <b>Undercover Books</b> - Developed by Rodrigo Januario &amp; Bruno Demore</p>
+            </div>
+        </footer>
 
     </form>
 </body>
