Created the Oracle cofiguration and also the home search bar.

--- a/Comp229-TeamAssign/Content/Site.css
+++ b/Comp229-TeamAssign/Content/Site.css
@@ -23,13 +23,6 @@ footer {
     padding-right: 15px;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
-
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .jumbotron {
@@ -45,6 +38,30 @@ textarea {
         margin-top: 10px;
         text-align: center;
         height: 50px;
+    }
+
+    .ub-book-select-input,
+    .ub-book-text-input {
+        height: 35px;
+        font-size: 16pt;
+        font-weight: bold;
+    }
+
+    .ub-book-select-input {
+        width: 110px;
+        margin-left: 15px;
+        margin-left: 15px;
+    }
+
+    .ub-book-text-input {
+        width: 500px;
+    }
+
+    .ub-book-button {
+        height: 35px;
+        font-size: 16pt;
+        font-weight: bold;
+        color: #fff;
     }
 }
 
@@ -62,6 +79,18 @@ textarea {
         overflow: auto;
     }
 
+    .ub-book-select-input,
+    .ub-book-text-input,
+    .ub-book-button {
+        height: 30px;
+        font-size: 14px;
+        margin-bottom: 7px;
+    }
+
+    .ub-book-text-input {
+        width: 275px;
+    }
+
     .ub-book-content {
         padding-bottom: 30px;
     }
@@ -73,31 +102,31 @@ textarea {
     box-shadow: 0 10px 10px #454545;
 }
 
-.navbar-inverse .navbar-brand {
-    padding: 5px 15px;
-}
+    .navbar-inverse .navbar-brand {
+        padding: 5px 15px;
+    }
 
-.navbar-inverse .navbar-nav > li > a {
-    color: #000000;
-    font-weight: bolder;
-}
+    .navbar-inverse .navbar-nav > li > a {
+        color: #000000;
+        font-weight: bolder;
+    }
 
-.navbar-inverse .navbar-toggle {
-    border-color: #84563f;
-}
+    .navbar-inverse .navbar-toggle {
+        border-color: #84563f;
+    }
 
-.navbar-inverse .navbar-toggle:hover {
-    background-color: #84563f;
-}
+        .navbar-inverse .navbar-toggle:hover {
+            background-color: #84563f;
+        }
 
-.navbar-inverse .navbar-toggle:focus {
-    background-color: #84563f;
-}
+        .navbar-inverse .navbar-toggle:focus {
+            background-color: #84563f;
+        }
 
-.navbar-inverse .navbar-collapse,
-.navbar-inverse .navbar-form {
-    border-color: #84563f;
-}
+    .navbar-inverse .navbar-collapse,
+    .navbar-inverse .navbar-form {
+        border-color: #84563f;
+    }
 
 .ub-nav-bar-logo {
     width: 53px;
@@ -128,4 +157,26 @@ textarea {
 .ub-book-image-small {
     width: 218px;
     height: 218px;
+}
+
+.ub-book-search-bar {
+    padding-top: 7px;
+}
+
+.ub-book-select-input,
+.ub-book-text-input {
+    background-color: #98af8c;
+    border: 2px solid #61705a;
+    border-radius: 8px;
+}
+
+.ub-book-select-input {
+    width: 110px;
+}
+
+.ub-book-button {
+    background-color: #71a4d6;
+    border: 2px solid #213140;
+    border-radius: 8px;
+    color: #fff;
 }
