--- a/Comp229-TeamAssign/Content/Site.css
+++ b/Comp229-TeamAssign/Content/Site.css
@@ -4,6 +4,7 @@ body {
     padding-bottom: 20px;
     font-family: Calibri;
     font-size: 20px;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 footer {
@@ -23,13 +24,6 @@ footer {
     padding-right: 15px;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
-
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .jumbotron {
@@ -45,6 +39,38 @@ textarea {
         margin-top: 10px;
         text-align: center;
         height: 50px;
+    }
+
+    .ub-book-select-input,
+    .ub-book-text-input {
+        height: 35px;
+        font-size: 14pt;
+        font-weight: bold;
+    }
+
+    .ub-book-select-input {
+        width: 110px;
+        margin-left: 15px;
+        margin-left: 15px;
+    }
+
+    .ub-book-text-input {
+        width: 450px;
+    }
+
+    .ub-book-button {
+        height: 35px;
+        font-size: 14pt;
+        font-weight: bold;
+        color: #fff;
+    }
+
+    .ub-book-user-name {
+        margin-left: 90px;
+    }
+
+    .ub-book-signin-register ul {
+        margin-right: -25px;
     }
 }
 
@@ -62,8 +88,24 @@ textarea {
         overflow: auto;
     }
 
+    .ub-book-select-input,
+    .ub-book-text-input,
+    .ub-book-button {
+        height: 30px;
+        font-size: 14px;
+        margin-bottom: 7px;
+    }
+
+    .ub-book-text-input {
+        width: 355px;
+    }
+
     .ub-book-content {
         padding-bottom: 30px;
+    }
+
+    .nav li {
+        display: inline-block;
     }
 }
 
@@ -79,7 +121,8 @@ textarea {
 
 .navbar-inverse .navbar-nav > li > a {
     color: #000000;
-    font-weight: bolder;
+    font-size: 13pt;
+    font-weight: bold;
 }
 
 .navbar-inverse .navbar-toggle {
@@ -107,6 +150,9 @@ textarea {
 
 .ub-container {
     padding-top: 30px;
+    margin-bottom: 25px;
+    display: block;
+    overflow: auto;
 }
 
 .ub-book-content {
@@ -114,11 +160,14 @@ textarea {
     overflow: auto;
     margin-bottom: 30px;
     border-bottom: 1px solid #e5e5e5;
+    background-color: #ffffff;
+    padding: 20px 0 10px 0;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px;
 }
 
 .ub-boook-name > a {
     color: #61705a;
-    font-weight: bold;
 }
 
 .ub-book-image {
@@ -128,4 +177,42 @@ textarea {
 .ub-book-image-small {
     width: 218px;
     height: 218px;
+}
+
+.ub-book-bar-content {
+    float: left;
+    margin-left: -20px;
+}
+
+.ub-book-search-bar {
+    padding-top: 7px;
+    width: 110%;
+}
+
+.ub-book-select-input,
+.ub-book-text-input {
+    background-color: #98af8c;
+    border: 2px solid #61705a;
+    border-radius: 8px;
+}
+
+.ub-book-select-input {
+    width: 110px;
+}
+
+.ub-book-button {
+    background-color: #71a4d6;
+    border: 2px solid #213140;
+    border-radius: 8px;
+    color: #fff;
+}
+
+.ub-book-user-name {
+    float: left;
+    font-size: 13pt;
+    padding-top: 15px;
+}
+
+.ub-book-signin-register ul {
+    float: right;
 }
