--- a/Comp229-TeamAssign/Site.Master
+++ b/Comp229-TeamAssign/Site.Master
@@ -1,5 +1,7 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Comp229_TeamAssign.SiteMaster" %>
 
+<%@ Import namespace="Comp229_TeamAssign.Database.Models" %>
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -47,14 +49,36 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">
+                    <a class="navbar-brand" runat="server" href="~/?showAll=true">
                         <img src="Images/logo.png" class="ub-nav-bar-logo"/>
                     </a>
+                    <div class="ub-book-search-bar">
+                        <asp:DropDownList ID="SearchByDropDownList" SelectionMode="Single" CssClass="ub-book-select-input" runat="server">
+                            <asp:ListItem Selected="True" Text="Title" Value="Title"/>
+                            <asp:ListItem Selected="False" Text="Author" Value="Author"/>
+                            <asp:ListItem Selected="False" Text="ISBN" Value="ISBN"/>
+                        </asp:DropDownList>
+                        <asp:TextBox ID="SearchByTextBox" TextMode="SingleLine" CssClass="ub-book-text-input" ValidationGroup="SearchGroup" runat="server" placeholder="Use part of ISBN, Title of Author to Search for Books..."/>
+                        <asp:Button ID="SearchByButton" Text="Search Books" CssClass="ub-book-button" ValidationGroup="SearchGroup" runat="server" OnClick="SearchByButton_Click" />
+                    </div>
                 </div>
                 <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                    </ul>
+                    <div class="ub-book-user-name">
+                        <% if (null != Session["LoggedUser"]) { %>
+                            <span>Hello, <%= (Session["LoggedUser"] as User).FirstName %></span>
+                        <% } else { %>
+                            <span>&nbsp;</span>
+                        <% } %>
+                    </div>
+                    <div class="ub-book-signin-register">
+                        <ul class="nav navbar-nav">
+                            <li><a runat="server" href="~/Login">Login</a></li>
+                            <li><a runat="server" href="~/Register">Register</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-12">
+                        <asp:RequiredFieldValidator ID="SearchByTextBox_RequiredFieldValidator" ControlToValidate="SearchByTextBox" ValidationGroup="SearchGroup" CssClass="ub-book-search-validator" runat="server" />
+                    </div>
                 </div>
             </div>
         </div>
