Login and Register Pages done. Site Master logout button setted up.

--- a/Comp229-TeamAssign/Site.Master
+++ b/Comp229-TeamAssign/Site.Master
@@ -72,7 +72,11 @@
                     </div>
                     <div class="ub-book-signin-register">
                         <ul class="nav navbar-nav">
-                            <li><a runat="server" href="~/Login">Login</a></li>
+                            <% if (null == Session["LoggedUser"]) { %>
+                                <li><a runat="server" href="~/Login">Login</a></li>
+                            <% } else { %>
+                                <li><asp:LinkButton ID="LogoutLinkButton" Text="Logout" runat="server" OnClick="LogoutLinkButton_Click"/></li>
+                            <% } %>
                             <li><a runat="server" href="~/Register">Register</a></li>
                         </ul>
                     </div>
