Fixed bugs in register and login pages.

--- a/Comp229-TeamAssign/Content/Site.css
+++ b/Comp229-TeamAssign/Content/Site.css
@@ -218,11 +218,13 @@ footer {
 }
 
 .ub-book-button-holder {
+    margin-top: 25px;
     text-align: center;
 }
 
 .ub-book-button-holder .ub-book-button {
     width: 95%;
+    height: 40px;
 }
 
 .register-panel {
