--- a/Comp229-TeamAssign/Site.Master
+++ b/Comp229-TeamAssign/Site.Master
@@ -77,7 +77,12 @@
                             <% } else { %>
                                 <li><asp:LinkButton ID="LogoutLinkButton" Text="Logout" runat="server" OnClick="LogoutLinkButton_Click"/></li>
                             <% } %>
-                            <li><a runat="server" href="~/Register">Register</a></li>
+
+                            <% if (null == Session["LoggedUser"]) { %>
+                                <li><a runat="server" href="~/Register">Register</a></li>
+                            <% } else { %>
+                                <li><a runat="server" href="~/MyAccount">My Account</a></li>
+                            <% } %>
                         </ul>
                     </div>
                     <div class="col-sm-12">
