--- a/Comp229-TeamAssign/Content/Site.css
+++ b/Comp229-TeamAssign/Content/Site.css
@@ -76,6 +76,11 @@ hr {
     .ub-book-signin-register ul {
         margin-right: -25px;
     }
+
+    .ub-book-image-large {
+        width: 350px;
+        height: 413px;
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -179,7 +184,7 @@ hr {
 }
 
 .ub-book-image-small {
-    width: 218px;
+    width: 184px;
     height: 218px;
 }
 
@@ -262,6 +267,69 @@ hr {
     height: 100px;
 }
 
+
+.ub-book-detail-container {
+    background-color: white;
+    overflow: auto;
+    display: block;
+    border-radius: 8px;
+    box-shadow: 5px 5px 8px;
+    margin: 20px 0 20px 0;
+    padding: 20px 10px;
+}
+
+.ub-book-details-text-title  {
+    font-size: 20pt;
+    font-weight: bold;
+    color: #61705a;
+    margin-bottom: 10px;
+}
+
+.ub-book-details-text-description {
+    font-size: 14pt;
+    text-align: justify;
+    overflow: auto;
+    display: block;
+}
+
+.ub-book-details-text-description-bold  {
+    font-weight: bold;
+}
+
+.ub-book-details-text-description-idented  {
+    padding-left: 80px;
+}
+
+.ub-book-detail-text-details {
+    margin-top: 15px;
+    font-size: 18pt;
+    font-weight: bold;
+    color: #61705a;
+}
+
+.ub-book-image-all-thumbnails {
+    overflow: auto;
+    display: block;
+    margin-bottom: 20px;
+}
+
+.ub-book-image-thumbnail-container {
+    padding: 0 5px;
+    width: 20%;
+    float: left;
+    text-align: center;
+}
+
+.ub-book-image-thumbnail {
+    width: 50px;
+    height: 59px;
+}
+
+.ub-book-image-large-container {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .register-panel {
     border: 1px solid #004250;
     border-radius: 8px;
@@ -333,17 +401,4 @@ hr {
     display: block;
     text-align: center;
     color: #aa0000;
-}
-
-.book-detail-container {
-    border: 2px;
-    font-size: medium;
-    font-style: italic;
-    margin-top: 20px;
-}
-
-.book-image-container {
-    width: 350px;
-    height: 400px;
-    margin-top: 20px;
 }
