Implemented the update book feature. Fixed some bugs and CSS and layout

--- a/Comp229-TeamAssign/Content/Site.css
+++ b/Comp229-TeamAssign/Content/Site.css
@@ -379,7 +379,8 @@ hr {
 }
 
 .register-button-container {
-    margin-top: 40px;
+    display: block;
+    overflow: auto;
 }
 
 .register-button-container .ub-book-button {
